--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,18 @@ django-allauth==0.63.6
 bcrypt==4.2.0 
 gunicorn==23.0.0
 firebase-admin==6.5.0
+
+
+
+dj-database-url==2.1.0 
+celery==5.3.6 
+redis==5.0.3 
+django-celery-beat==2.6.0 
+pandas==2.2.2 
+numpy==1.26.4 
+scikit-learn==1.4.2 
+joblib==1.4.0 
+geopy==2.4.1 
+python-dotenv==1.0.1 
+djangorestframework==3.15.2 
+django-allauth==0.63.6
