--- a/render.yaml
+++ b/render.yaml
@@ -31,6 +31,10 @@ services:
           property: connectionString
       - key: DJANGO_ALLOWED_HOSTS
         value: .onrender.com
+      - key: JWT_SECRET_KEY
+        value: 1a2b3c4d5e6f7g8h9i0j1k2l3m4n5o6p7q8r9s0t1u2v3w4x5y6z7a8b9c0 # Substitua por um valor seguro
+      - key: FIREBASE_CREDENTIALS
+        value: '{"type": "service_account", ...}' # Substitua pelo JSON do Firebase
       - key: PYTHON_VERSION
         value: 3.10.12
     disks:
@@ -59,6 +63,16 @@ services:
           name: facilita-redis
           type: redis
           property: connectionString
+      - key: JWT_SECRET_KEY
+        fromService:
+          name: facilita-web
+          type: web
+          envVarKey: JWT_SECRET_KEY
+      - key: FIREBASE_CREDENTIALS
+        fromService:
+          name: facilita-web
+          type: web
+          envVarKey: FIREBASE_CREDENTIALS
       - key: PYTHON_VERSION
         value: 3.10.12
     disks:
@@ -87,6 +101,16 @@ services:
           name: facilita-redis
           type: redis
           property: connectionString
+      - key: JWT_SECRET_KEY
+        fromService:
+          name: facilita-web
+          type: web
+          envVarKey: JWT_SECRET_KEY
+      - key: FIREBASE_CREDENTIALS
+        fromService:
+          name: facilita-web
+          type: web
+          envVarKey: FIREBASE_CREDENTIALS
       - key: PYTHON_VERSION
         value: 3.10.12
     disks:
